# mcm

./: .gitignore  manage.py  playground.py  pyproject.toml  requests.http  snippets.http  tasks_example.py
.generated/helloworld/: helloworld_pb2_grpc.py
account/: auth.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py
common/: decorators.py  forms.py  mixins.py  models.py  serializers.py  shortcuts.py  tasks.py  urls.py  views.py
common/migrations/: 0001_initial.py  0002_auto_20200923_0135.py  0002_auto_20201012_0832.py  0003_auto_20200923_0312.py  0003_task.py  0004_auto_20201020_0550.py  0004_auto_20201024_0207.py
common/svc/: __init__.py  contexts.py  helper.py  mixins.py  tencentcloud.py  wrappers.py
common/templatetags/: mcm.py
grpc_framework/: __init__.py
helloworld/: grpc_services.py  helloworld_pb2.py
mcm/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
network/: models.py  tasks.py  urls.py  views.py
network/migrations/: 0001_initial.py  0002_auto_20201017_0824.py  0003_auto_20201020_0550.py  0003_auto_20201024_0207.py
network/svc/: base.py  tencentcloud.py
proto/helloworld/: helloworld.proto
proto/test/: test.proto
protos/helloworld/: helloworld.proto
protos/test/: test.proto
quickstart/: urls.py  views.py
snippets/: models.py  permissions.py  serializers.py  urls.py  views.py
snippets/migrations/: 0001_initial.py
static/: bootstrap4-toggle.min.css  common.css  common.js
templates/: layout.html  message.html
templates/components/: filter.html  pagination.html
test/: test_pb2.py
(+21 files in other folders)
